--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-app",
-  "version": "0.1.2",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "semver": "^7.3.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
