--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,7 +19,8 @@ jobs:
         node-version: [16.x, 18.x]
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checking out
+      uses: actions/checkout@v3
     - name: Using Node ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
